# binius_bs_groestl

./: .gitmodules  README.md
crates/core/: Cargo.toml  build.rs
crates/core/src/: lib.rs
crates/core/src/bitsliced_mul/: bs.c  bs.h  bs_mul.rs  bs_multiply_128.h  mod.rs
crates/core/src/merkle_tree/: merkle_tree.rs
crates/core/src/poly_commit/: tensor_pcs.rs
crates/field/: Cargo.toml  build.rs
crates/field/benches/: binary_field.rs  binary_field_util.rs
crates/field/src/: lib.rs  packed_binary_field.rs
crates/field/src/bitsliced_mul/: bs.c  bs.h  bs_mul.rs  bs_multiply_128.c  bs_multiply_128.h  polynomial_byte_sliced_mul_16.c  polynomial_byte_sliced_mul_16.h
crates/hash/: Cargo.toml  build.rs
crates/hash/benches/: hash.rs
crates/hash/src/: lib.rs
crates/hash/src/groestl/: bs_groestl.rs  hasher.rs  mod.rs
crates/hash/tests/: integration_tests.rs
examples/: Cargo.toml
