[package]
name = "binius_hash"
version.workspace = true
edition.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
binius_field = { path = "../field" }
binius_utils = { path = "../utils" }
binius_ntt = { path = "../ntt" }
bytemuck.workspace = true
cfg-if.workspace = true
lazy_static.workspace = true
p3-symmetric.workspace = true
thiserror.workspace = true
log.workspace = true



[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion.workspace = true
hex-literal.workspace = true
rand.workspace = true
rayon = "1.5"
groestl_crypto.workspace = true

[lib]
bench = false

[[bench]]
name = "hash"
harness = false
